// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle all clicks 1`] = `
<ul
  className="pagination pagination-list"
>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      ««
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className=""
    key="0"
  >
    <a
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className=""
    key="1"
  >
    <a
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="active"
    key="2"
  >
    <a
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »»
    </a>
  </li>
</ul>
`;

exports[`handle all clicks 2`] = `
<ul
  className="pagination pagination-list"
>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      ««
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className=""
    key="0"
  >
    <a
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className=""
    key="1"
  >
    <a
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="active"
    key="2"
  >
    <a
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »»
    </a>
  </li>
</ul>
`;

exports[`handle fetch 1`] = `
<ul
  className="pagination pagination-list"
>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      ««
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="active"
    key="0"
  >
    <a
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className=""
    key="1"
  >
    <a
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className=""
    key="2"
  >
    <a
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      »
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      »»
    </a>
  </li>
</ul>
`;

exports[`handle pages 1`] = `
<ul
  className="pagination pagination-list"
>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      ««
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className=""
    key="0"
  >
    <a
      onClick={[Function]}
    >
      7
    </a>
  </li>
  <li
    className=""
    key="1"
  >
    <a
      onClick={[Function]}
    >
      8
    </a>
  </li>
  <li
    className=""
    key="2"
  >
    <a
      onClick={[Function]}
    >
      9
    </a>
  </li>
  <li
    className=""
    key="3"
  >
    <a
      onClick={[Function]}
    >
      10
    </a>
  </li>
  <li
    className=""
    key="4"
  >
    <a
      onClick={[Function]}
    >
      11
    </a>
  </li>
  <li
    className=""
    key="5"
  >
    <a
      onClick={[Function]}
    >
      12
    </a>
  </li>
  <li
    className=""
    key="6"
  >
    <a
      onClick={[Function]}
    >
      13
    </a>
  </li>
  <li
    className=""
    key="7"
  >
    <a
      onClick={[Function]}
    >
      14
    </a>
  </li>
  <li
    className=""
    key="8"
  >
    <a
      onClick={[Function]}
    >
      15
    </a>
  </li>
  <li
    className="active"
    key="9"
  >
    <a
      onClick={[Function]}
    >
      16
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      »»
    </a>
  </li>
</ul>
`;

exports[`handle pages 2`] = `
<ul
  className="pagination pagination-list"
>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      ««
    </a>
  </li>
  <li
    className="disabled"
  >
    <a
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="active"
    key="0"
  >
    <a
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className=""
    key="1"
  >
    <a
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className=""
    key="2"
  >
    <a
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className=""
    key="3"
  >
    <a
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className=""
    key="4"
  >
    <a
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className=""
    key="5"
  >
    <a
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className=""
    key="6"
  >
    <a
      onClick={[Function]}
    >
      7
    </a>
  </li>
  <li
    className=""
    key="7"
  >
    <a
      onClick={[Function]}
    >
      8
    </a>
  </li>
  <li
    className=""
    key="8"
  >
    <a
      onClick={[Function]}
    >
      9
    </a>
  </li>
  <li
    className=""
    key="9"
  >
    <a
      onClick={[Function]}
    >
      10
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      »
    </a>
  </li>
  <li
    className=""
  >
    <a
      onClick={[Function]}
    >
      »»
    </a>
  </li>
</ul>
`;

exports[`handles no pages 1`] = `""`;

exports[`renders the pagination component 1`] = `""`;
